cambio de texto
jdjsdkdje

--- a/views/index.html
+++ b/views/index.html
@@ -209,7 +209,7 @@
               <div class="col-inner">
                 <div class="section-heading">
                   <h5>Tu tienda disponible en línea 24/7</h5>
-                  <h2>Go!Commers</h2>
+                  <h2>Go!Commerce</h2>
                   <p>Sistema que entrega todas las herramientas necesarias para publicar y monitorear tu negocio en la web.</p>
                   <p>&nbsp;</p>
                   <h4>Algunas características:</h4>
