--- a/views/index.html
+++ b/views/index.html
@@ -333,7 +333,7 @@
                   </div>
                 </div>
 
-                <div style="display: none;" class="icon-box _left">
+               <!-- <div style="display: none;" class="icon-box _left">
                   <div class="icon-box-media">
                     <img src="assets/img/icon/pin.png" alt="" data-sr="bottom">
                   </div>
@@ -345,7 +345,7 @@
                     <br>
                     <span>Long Branch, P.O Box 55016</span>
                   </div>
-                </div>
+                </div> -->
 
               </div>
             </div>
