--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,9 @@
 <head  lang="en">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>GSW</title>
+  <title>GSW Chile</title>
   <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="keywords" content="e-commerce,intranet,mobile">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="google-site-verification" content="1O_LsOqLHXdvoJovptMR7hZ0-E2VGXSF2uDXH4GdE8s" />
