--- a/views/index.html
+++ b/views/index.html
@@ -7,9 +7,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>GSW Chile</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="e-commerce,intranet,mobile">
-  <meta name="author" content="">
+  <meta name="description" content="Expertos en desarrollo digital">
+  <meta name="keywords" content="desarrollo aplicaciones moviles,apps,web,desarrollo,derrollo web,e-commerce,intranet,mobile">
+  <meta name="author" content="gosmartware">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="google-site-verification" content="1O_LsOqLHXdvoJovptMR7hZ0-E2VGXSF2uDXH4GdE8s" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
